# nano_Identify

./: CMakeLists.txt
model/: best.xml  best.yaml  metadata.yaml
model_int8/: best.xml  best.yaml
model_origin/: best.xml
src/: main.cpp
